// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Returns both normal users and system users 1`] = `
[
  {
    "avatar": undefined,
    "fullHonorificName": undefined,
    "id": "[sanitized]",
    "name": [
      {
        "family": "Doe",
        "given": [
          "John",
        ],
        "use": "en",
      },
    ],
    "primaryOfficeId": "27160bbd-32d1-4625-812f-860226bfb92a",
    "role": "REGISTRATION_AGENT",
    "signature": undefined,
    "type": "user",
  },
  {
    "avatar": undefined,
    "fullHonorificName": undefined,
    "id": "[sanitized]",
    "name": [
      {
        "family": "Doe",
        "given": [
          "John",
        ],
        "use": "en",
      },
    ],
    "primaryOfficeId": "5125bb4f-42d1-4c17-8fb0-012def8aa07f",
    "role": "REGISTRATION_AGENT",
    "signature": undefined,
    "type": "user",
  },
  {
    "avatar": undefined,
    "fullHonorificName": undefined,
    "id": "[sanitized]",
    "name": [
      {
        "family": "Doe",
        "given": [
          "John",
        ],
        "use": "en",
      },
    ],
    "primaryOfficeId": "435d9c91-0bd8-4ae9-af7b-3f90516c5c43",
    "role": "REGISTRATION_AGENT",
    "signature": undefined,
    "type": "user",
  },
  {
    "avatar": undefined,
    "fullHonorificName": undefined,
    "id": "[sanitized]",
    "name": [
      {
        "family": "Doe",
        "given": [
          "John",
        ],
        "use": "en",
      },
    ],
    "primaryOfficeId": "16c434f2-78fd-4203-8ed3-b4dc653fe017",
    "role": "REGISTRATION_AGENT",
    "signature": undefined,
    "type": "user",
  },
  {
    "avatar": undefined,
    "fullHonorificName": undefined,
    "id": "[sanitized]",
    "name": [
      {
        "family": "Doe",
        "given": [
          "John",
        ],
        "use": "en",
      },
    ],
    "primaryOfficeId": "aa28878e-b3d2-4db5-aced-c043f15af35b",
    "role": "REGISTRATION_AGENT",
    "signature": undefined,
    "type": "user",
  },
  {
    "id": "[sanitized]",
    "name": "My health system integration",
    "role": "HEALTH",
    "type": "system",
  },
]
`;

exports[`Returns multiple users with honorifics 1`] = `
[
  {
    "avatar": undefined,
    "fullHonorificName": "4th Class Registration Officer, John Doe",
    "id": "[sanitized]",
    "name": [
      {
        "family": "Doe",
        "given": [
          "John",
        ],
        "use": "en",
      },
    ],
    "primaryOfficeId": "27160bbd-32d1-4625-812f-860226bfb92a",
    "role": "REGISTRATION_AGENT",
    "signature": undefined,
    "type": "user",
  },
  {
    "avatar": undefined,
    "fullHonorificName": "5th Class Registration Officer, John Doe",
    "id": "[sanitized]",
    "name": [
      {
        "family": "Doe",
        "given": [
          "John",
        ],
        "use": "en",
      },
    ],
    "primaryOfficeId": "5125bb4f-42d1-4c17-8fb0-012def8aa07f",
    "role": "REGISTRATION_AGENT",
    "signature": undefined,
    "type": "user",
  },
  {
    "avatar": undefined,
    "fullHonorificName": "6th Class Registration Officer, John Doe",
    "id": "[sanitized]",
    "name": [
      {
        "family": "Doe",
        "given": [
          "John",
        ],
        "use": "en",
      },
    ],
    "primaryOfficeId": "435d9c91-0bd8-4ae9-af7b-3f90516c5c43",
    "role": "REGISTRATION_AGENT",
    "signature": undefined,
    "type": "user",
  },
  {
    "avatar": undefined,
    "fullHonorificName": "7th Class Registration Officer, John Doe",
    "id": "[sanitized]",
    "name": [
      {
        "family": "Doe",
        "given": [
          "John",
        ],
        "use": "en",
      },
    ],
    "primaryOfficeId": "16c434f2-78fd-4203-8ed3-b4dc653fe017",
    "role": "REGISTRATION_AGENT",
    "signature": undefined,
    "type": "user",
  },
  {
    "avatar": undefined,
    "fullHonorificName": "8th Class Registration Officer, John Doe",
    "id": "[sanitized]",
    "name": [
      {
        "family": "Doe",
        "given": [
          "John",
        ],
        "use": "en",
      },
    ],
    "primaryOfficeId": "aa28878e-b3d2-4db5-aced-c043f15af35b",
    "role": "REGISTRATION_AGENT",
    "signature": undefined,
    "type": "user",
  },
]
`;
